# tplink-omada-api

./: .flake8  .gitattributes  .gitignore  Dockerfile.dev  LICENSE  README.md  client.py  pyproject.toml  requirements.txt  requirements_test.txt  sample_client.py
.devcontainer/: devcontainer.json
.github/workflows/: python-package.yml  python-publish.yml
api/: LICENSE  __init__.py  definitions.py  devices.py  exceptions.py  omadaclient.py
sample/: sample_client.py
src/tplink_omada_client/: __init__.py  clients.py  definitions.py  devices.py  exceptions.py  omadaapiconnection.py  omadaclient.py  omadasiteclient.py  vpn.py
src/tplink_omada_client/cli/: __init__.py  __main__.py  command_access_point.py  command_access_points.py  command_block_client.py  command_certificate.py  command_client.py  command_clients.py  command_controller_info.py  command_default.py  command_devices.py  command_firmware.py  command_gateway.py  command_known_clients.py  command_poe.py  command_port_profiles.py  command_reboot.py  command_reconnect_client.py  command_set_client_name.py  command_set_device_led.py  command_switch.py  command_switch_ports.py  command_switches.py  command_target.py  command_targets.py  command_unblock_client.py  command_vpn.py  command_wan.py  config.py  util.py
tests/: conftest.py  test_cli_port_profiles.py  test_cli_vpn.py  test_conftest.py  test_controller_update_info.py  test_omadaapiconnection.py  test_switch_port_profiles.py
