[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tplink_omada_client"
version = "1.5.3"
authors = [
  { name="Mark Godwin", email="10632972+MarkGodwin@users.noreply.github.com" },
]
description = "Python wrapper for TP-Link Omada SDN Controller API (OC200/OC300/Software Controller)"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "aiohttp >= 3.12.2, <4",
  "awesomeversion >= 25.8.0"
]

[project.scripts]
omada = "tplink_omada_client.cli:main"

[project.urls]
"Homepage" = "https://github.com/MarkGodwin/tplink-omada-api"
"Bug Tracker" = "https://github.com/MarkGodwin/tplink-omada-api/issues"

[dependency-groups]
dev = [
  {include-group = "lint"},
  {include-group = "test"},
  "uv>=0.9.30",
]
lint = [
  "flake8>=7.3.0",
  "pylint>=4.0.4",
  "ruff>=0.15.0",
]
test = [
  "coverage>=7.4.4",
  "pytest>=9.0.0",
  "pytest-aiohttp>=1.0.5",
]

[tool.ruff]
line-length = 127

[tool.pylint.main]
max-line-length = 127
